<resources>
    <string name="app_name">TestLocationTracker</string>

    <!-- Fragment map -->
    <string name="fragment_map_sheet_title">Current tracking</string>
    <string name="fragment_map_start">START</string>
    <string name="fragment_map_stop">STOP</string>
    <string name="fragment_map_clear">CLEAR</string>
    <string name="fragment_map_started_toast">Tracking has started</string>
    <string name="fragment_map_stop_toast">Tracking has stop</string>
    <string name="fragment_map_cleared_toast">Tracking list cleared</string>
    <string name="fragment_map_permission_denied">This app requires location permission to work correctly.</string>

    <!-- Fragment history -->
    <string name="fragment_history_delete_all">Delete all tracks</string>
    <string name="fragment_history_is_tracking">Cannot select track, tracking service is enabled</string>

    <!-- Dialog save to database  -->
    <string name="dialog_save_to_db_title">Save a track on your device</string>
    <string name="dialog_save_to_db_message">You must give a name to successfully save the track</string>
    <string name="dialog_save_to_db_hint">Enter new name</string>
    <string name="dialog_save_to_db_save">Save</string>
    <string name="dialog_save_to_db_cancel">Cancel</string>
    <string name="dialog_save_to_db_success_toast">Track saved</string>

    <!-- Dialog location permission -->
    <string name="dialog_location_permission_title">Allow the app to access this device location?</string>
    <string name="dialog_location_permission_allow">Allow</string>
    <string name="dialog_location_permission_deny">Deny</string>

    <!-- Item coordinates -->
    <string name="item_coordinates_lat">Latitude: %1$f</string>
    <string name="item_coordinates_long">Longitude: %1$f</string>

    <!-- Item track -->
    <string name="item_track_name">Name: %1$s</string>
    <string name="item_track_count">Coordinates count: %1$d</string>
    <string name="item_track_date">Track date: %1$s</string>

    <!-- Tracking service -->
    <string name="service_title">Tracking enabled</string>

    <!-- Menu -->
    <string name="menu_map">Map</string>
    <string name="menu_history">History</string>

</resources>